5.?
- added mime type based default application configuration into the settings dialog
- modified icon view more mime types are recognized now
- modified more compact settings dialog

5.7 21-December 2012
- added settings manager, almost all settings are now centralized in one dialog
- modified edit menu
- modified custom action management centralized to CustomActionManager
- fixed bug loading of file icons, versioned files like 'xy.so.1.0.0' are now displayed propertly
- fixed bug in bookmarks: newly created bookmarks were not appeared in list of shortcuts until application was restarted or custom actions dialog was opened
- fixed bug in shortcuts: sometimes shortcut editor show duplicated bookmarks

5.6 17-October 2012
- added GUI for drag & drop: qtfm asks user about what he want to do (copy, move or create link)
- added sorting (name, size and date in ascending or descending order)
- added FileUtils in order to provide file management routines that can be reused 
- added main menu section "Go"  
- modified drag & drop; when holding ctrl/shift files are copied/moved 
- modified strings "/" was also replaced with QDir::separator() 

5.5	15-June-2012
- modified file xdg associations to use mimeapps.list.
- modified tab right-click to activate selected tab.
- modified thumbs, uniform size/aspect
- modified 'Refresh' to update mimetype if changed.
- modified xdg configuration to ensure '~/.local/share/applications/defaults.list' exists.
- fixed bug not allowing a cut/move on same device with limited space.
- fixed bug not using custom action override on double-click.
- fixed bug with moving across filesystems.
- fixed bug with multiple custom actions of same type not appearing.

5.4	7-March-2012
- added 'tabsOnTop' option.
- added new detection for automounts.
- added ability to set shortcuts for bookmarks.
- added option to use mimetype instead of suffix in detail mode and custom actions.